classDiagram
    class User
    User : uuid id
    User : string name
    User : string email
    User : string password_hash
    User : string role
    User : datetime created_at
    class Category
    Category : uuid id
    Category : string name
    Category : string description?
    class Product
    Product : uuid id
    Product : uuid category_id
    Product : string name
    Product : text description
    Product : decimal price
    Product : integer stock_quantity
    Product : string image_url?
    Product : boolean is_active
    class Cart
    Cart : uuid id
    Cart : uuid user_id
    Cart : datetime created_at
    Cart : datetime updated_at
    class CartItem
    CartItem : uuid id
    CartItem : uuid cart_id
    CartItem : uuid product_id
    CartItem : integer quantity
    CartItem : decimal unit_price
    class Order
    Order : uuid id
    Order : uuid user_id
    Order : string status
    Order : decimal total_amount
    Order : datetime created_at
    class OrderItem
    OrderItem : uuid id
    OrderItem : uuid order_id
    OrderItem : uuid product_id
    OrderItem : integer quantity
    OrderItem : decimal unit_price
    class Payment
    Payment : uuid id
    Payment : uuid order_id
    Payment : string method
    Payment : string status
    Payment : string transaction_reference?
    class Address
    Address : uuid id
    Address : uuid user_id
    Address : string line1
    Address : string city
    Address : string postal_code
    Address : string country

    User "1" --> "1" Cart : 1_to_1
    Cart "1" --> "*" CartItem : 1_to_many
    Product "1" --> "*" CartItem : 1_to_many
    User "1" --> "*" Order : 1_to_many
    Order "1" --> "*" OrderItem : 1_to_many
    Product "1" --> "*" OrderItem : 1_to_many
    Order "1" --> "1" Payment : 1_to_1
    Category "1" --> "*" Product : 1_to_many
    User "1" --> "*" Address : 1_to_many